# make_ai_robot

./: README.md
images/: README.md
src/environment/: CMakeLists.txt  setup.sh
src/environment/launch/: hospital.launch.py
src/environment/worlds/: hospital.world
src/go1_simulation/: CMakeLists.txt  guide.txt  package.xml
src/go1_simulation/config/: ros2_controllers.yaml  ros_gz_bridge.yaml
src/go1_simulation/go1_simulation/: go1_gt_pose_publisher.py  move_go1_with_keyboard.py
src/go1_simulation/launch/: go1.gazebo.launch.py  load_ros2_controllers.launch.py  robot_state_publisher.launch.py
src/go1_simulation/rviz/: go1.rviz
src/go1_simulation/urdf/config/: const.urdf.xacro  materials.urdf.xacro  sensor.urdf.xacro
src/go1_simulation/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  go1_ros2_control.urdf.xacro
src/go1_simulation/urdf/mech/: leg.urdf.xacro  trunk.urdf.xacro
src/go1_simulation/urdf/robots/: go1.urdf.xacro
src/go1_simulation/urdf/sensors/: depthCamera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro
src/go1_simulation/worlds/: empty.world  house.world
src/path_tracker/: CMakeLists.txt  package.xml
src/path_tracker/config/: mppi.yaml
src/path_tracker/include/: action.hpp  cost.hpp  dummy_path.hpp  dynamics.hpp  misc.hpp  path_tracker.hpp  regression.hpp  state.hpp  transform.hpp
src/path_tracker/launch/: path_tracker_launch.py
src/path_tracker/path_tracker/: move_robot.py
src/path_tracker/src/: action.cpp  communication.cpp  cost.cpp  dummy_path.cpp  dynamics.cpp  misc.cpp  path_tracker.cpp  regression.cpp  state.cpp  transform.cpp  visualization.cpp
src/ros2_unitree_legged_controller/: CMakeLists.txt  package.xml
src/ros2_unitree_legged_controller/include/ros2_unitree_legged_control/: ros2_unitree_legged_control.hpp
src/ros2_unitree_legged_controller/src/: ros2_unitree_legged_control.cpp
src/unitree_guide2/: CMakeLists.txt  package.xml
